added emojis and 3 more mains

--- a/index.html
+++ b/index.html
@@ -31,9 +31,26 @@
   
 <!-- Quote Content  -->
 <main>
-  <p>An Emoji</p>
+  <p>🇺🇸</p>
   <blockquote>A Quote that inspires you or makes you laugh.</blockquote>
 </main>
+
+<main>
+  <p>🇺🇸</p>
+  <blockquote>A Quote that inspires you or makes you laugh.</blockquote>
+</main>
+
+<main>
+  <p>🇺🇸</p>
+  <blockquote>A Quote that inspires you or makes you laugh.</blockquote>
+</main>
+
+<main>
+  <p>🇺🇸</p>
+  <blockquote>A Quote that inspires you or makes you laugh.</blockquote>
+</main>
+
+
   
 </body>
 </html>
