inserted all memorial day quotes

--- a/index.html
+++ b/index.html
@@ -32,22 +32,26 @@
 <!-- Quote Content  -->
 <main>
   <p>🇺🇸</p>
-  <blockquote>A Quote that inspires you or makes you laugh.</blockquote>
+  <blockquote>“Those who have long enjoyed such privileges as we enjoy forget in time that men have died to win them.”
+    -FDR</blockquote>
 </main>
 
 <main>
   <p>🇺🇸</p>
-  <blockquote>A Quote that inspires you or makes you laugh.</blockquote>
+  <blockquote>"Without memory, there is no culture. Without memory there would be no civilization, no future."
+    – Elie Wiesel</blockquote>
 </main>
 
 <main>
   <p>🇺🇸</p>
-  <blockquote>A Quote that inspires you or makes you laugh.</blockquote>
+  <blockquote>"I only regret that I have but one life to lose for my country."
+    – Nathan Hale</blockquote>
 </main>
 
 <main>
   <p>🇺🇸</p>
-  <blockquote>A Quote that inspires you or makes you laugh.</blockquote>
+  <blockquote>"A hero is someone who has given his or her life to something bigger than oneself."
+    – Joseph Campbell</blockquote>
 </main>
 
 
