--- a/index.html
+++ b/index.html
@@ -31,29 +31,9 @@
   
 <!-- Quote Content  -->
 <main>
-  <p>🇺🇸</p>
-  <blockquote>“Those who have long enjoyed such privileges as we enjoy forget in time that men have died to win them.”
-    -FDR</blockquote>
+  <p>Flag</p>
+  <blockquote>Quote</blockquote>
 </main>
-
-<main>
-  <p>🇺🇸</p>
-  <blockquote>"Without memory, there is no culture. Without memory there would be no civilization, no future."
-    – Elie Wiesel</blockquote>
-</main>
-
-<main>
-  <p>🇺🇸</p>
-  <blockquote>"I only regret that I have but one life to lose for my country."
-    – Nathan Hale</blockquote>
-</main>
-
-<main>
-  <p>🇺🇸</p>
-  <blockquote>"A hero is someone who has given his or her life to something bigger than oneself."
-    – Joseph Campbell</blockquote>
-</main>
-
 
   
 </body>
