--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Memorial Day 2023></title>
+  <title>Memorial Day 2023</title>
   
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon.png">
