--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <main>
 <!-- Navigation -->
 <nav>
-  <img src="assets/prev.svg" class="prev">
-  <img src="assets/random.svg" class="random">
-  <img src="assets/next.svg" class="next">
+  <img src="assets/prevwhite.svg" class="prevwhite">
+  <img src="assets/randomwhite.svg" class="randomwhite">
+  <img src="assets/nextwhite.svg" class="nextwhite">
 </nav>
   
 <!-- Quote Content  -->
